<resources>
    <string name="app_name">menuUI</string>
    <string name="facebook_app_id" translatable="false">2456988414377874</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2456988414377874</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">Signup or Signin by email</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- CommentDTO -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_qna">Q&amp;A</string>
    <string name="menu_search">Search</string>
    <string name="menu_prev_search">Previous Search</string>
    <string name="menu_myinfo">My Information</string>
    <string name="menu_freeboard">Free Board</string>
    <string name="menu_wish_menu">Wish Menu</string>

    <!-- Board Menu -->
    <string name="board_delete">Delete</string>

    <!-- QnA Menu -->
    <string name="question">Question : </string>
    <string name="writer">Writer : </string>
    <string name="date">Date : </string>
    <string name="view_cnt">View : </string>

    <!-- Activity - Find Location -->
    <string name="find_location">Find Location</string>
    <string name="location">Location</string>
    <string name="register">Register</string>
    <string name="missing_address">Please Enter Additional Address</string>

    <!-- AddQnaActivity -->
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add_qna">Add Q&amp;A</string>
    <string name="title_empty">Title is empty. Please enter the title</string>
    <string name="content_empty">Content is empty. Please enter the content</string>

    <!-- AddPostActivity -->
    <string name="image_null">Image is not uploaded. Please upload your image</string>

    <!-- FreeBoard -->
    <string name="view_comment">View Comments...</string>
    <string name="search_warning_message">Please enter your search keyword!</string>

    <!-- Translation -->
    <string name="translation">Translation</string>
    <string name="more_info">More</string>
</resources>