<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/qna_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/board_menu">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_qna"
            android:textStyle="bold"
            android:textSize="20dp"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/qna_board_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_qna"
        android:layout_marginHorizontal="15dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writer"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/qna_writer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="temp1234@gmail.com"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/qna_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2019.12.01 17:50:10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_cnt"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/qna_view_cnt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"/>
    </LinearLayout>

    <TextView
        android:id="@+id/qna_board_content_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:layout_weight="3"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/qna_comment_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"/>

</LinearLayout>
